[전처리] 필요한 데이터 추출, img_id로 분류

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# 대용량 데이터셋과 학습된 모델 
+/model_training/datasets/
+/model_training/trained_models/
