--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,5 @@ cython_debug/
 .pypirc
 
 # 대용량 데이터셋과 학습된 모델 
-model_training\datasets\078.어류 개체 촬영 영상
-model_training\datasets\078.어류 개체 촬영 영상
+model_training\datasets
 /model_training/trained_models/
